force-app/main/default/objects/CommercientSF__InvMaster__c/CommercientSF__InvMaster__c.object-meta.xml
<CustomObject>
    <label>Syspro Inventory Master</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Syspro Inventory Master</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>