force-app/main/default/objects/CommercientSF__InvMaster__c/fields/CommercientSF__AbcClass__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__AbcClass__c</fullName>
    <label>ABC classification</label>
    <length>255</length>
    <type>Text</type>
</CustomField>