force-app/main/default/objects/CommercientSF__InvMaster__c/fields/CommercientSF__AbcCostingReq__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__AbcCostingReq__c</fullName>
    <label>Activity Based Costing reqd</label>
    <length>255</length>
    <type>Text</type>
</CustomField>