force-app/main/default/objects/CommercientSF__InvMaster__c/fields/CommercientSF__AbcManufacturing__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__AbcManufacturing__c</fullName>
    <label>ABC - Manufacturing</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>