force-app/main/default/objects/CommercientSF__InvMaster__c/fields/CommercientSF__AbcSales__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__AbcSales__c</fullName>
    <label>ABC - Sales</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>