force-app/main/default/objects/CommercientSF__InvMaster__c/fields/CommercientSF__AlternateUom__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__AlternateUom__c</fullName>
    <label>Alternate unit of measure</label>
    <length>255</length>
    <type>Text</type>
</CustomField>