force-app/main/default/objects/CommercientSF__InvMaster__c/fields/CommercientSF__AltUnitChar__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__AltUnitChar__c</fullName>
    <label>Alternate unit characters</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>