force-app/main/default/objects/CommercientSF__InvMaster__c/fields/CommercientSF__Basis__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__Basis__c</fullName>
    <label>TPM Price basis</label>
    <length>255</length>
    <type>Text</type>
</CustomField>