force-app/main/default/objects/CommercientSF__InvMaster__c/fields/CommercientSF__Buyer__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__Buyer__c</fullName>
    <label>Buyer code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>