force-app/main/default/objects/CommercientSF__InvMaster__c/fields/CommercientSF__BuyingRule__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__BuyingRule__c</fullName>
    <label>Buying rule</label>
    <length>255</length>
    <type>Text</type>
</CustomField>