force-app/main/default/objects/CommercientSF__InvMaster__c/fields/CommercientSF__ClearingFlag__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__ClearingFlag__c</fullName>
    <label>Clearing stock flag</label>
    <length>255</length>
    <type>Text</type>
</CustomField>