force-app/main/default/objects/CommercientSF__InvMaster__c/fields/CommercientSF__ComponentCount__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__ComponentCount__c</fullName>
    <label>No of components route zero</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>