force-app/main/default/objects/CommercientSF__InvMaster__c/fields/CommercientSF__ConvFactAltUom__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__ConvFactAltUom__c</fullName>
    <label>Alt to Stocking factor</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>