force-app/main/default/objects/CommercientSF__InvMaster__c/fields/CommercientSF__ConvFactOthUom__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__ConvFactOthUom__c</fullName>
    <label>Other to Stocking factor</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>