force-app/main/default/objects/CommercientSF__InvMaster__c/fields/CommercientSF__ConvMulDiv__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__ConvMulDiv__c</fullName>
    <label>Alt to Stocking factor code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>