force-app/main/default/objects/CommercientSF__InvMaster__c/fields/CommercientSF__CostUom__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__CostUom__c</fullName>
    <label>Cost unit of measure</label>
    <length>255</length>
    <type>Text</type>
</CustomField>