force-app/main/default/objects/CommercientSF__InvMaster__c/fields/CommercientSF__CountryOfOrigin__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__CountryOfOrigin__c</fullName>
    <label>Country of Origin</label>
    <length>255</length>
    <type>Text</type>
</CustomField>