force-app/main/default/objects/CommercientSF__InvMaster__c/fields/CommercientSF__CycleCount__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__CycleCount__c</fullName>
    <label>Quantity cycle count</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>