force-app/main/default/objects/CommercientSF__InvMaster__c/fields/CommercientSF__DateStkAdded__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__DateStkAdded__c</fullName>
    <label>Date stock code added</label>
    <type>DateTime</type>
</CustomField>