force-app/main/default/objects/CommercientSF__InvMaster__c/fields/CommercientSF__DistWarehouseToUse__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__DistWarehouseToUse__c</fullName>
    <label>Distribution warehouse to use</label>
    <length>255</length>
    <type>Text</type>
</CustomField>