force-app/main/default/objects/CommercientSF__InvMaster__c/fields/CommercientSF__DockToStock__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__DockToStock__c</fullName>
    <label>Dock to stock days</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>