force-app/main/default/objects/CommercientSF__InvMaster__c/fields/CommercientSF__Ebq__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__Ebq__c</fullName>
    <label>Economic Batch Quantity</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>