force-app/main/default/objects/CommercientSF__InvMaster__c/fields/CommercientSF__EbqPan__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__EbqPan__c</fullName>
    <label>Manufacture Quantity flag</label>
    <length>255</length>
    <type>Text</type>
</CustomField>