force-app/main/default/objects/CommercientSF__InvMaster__c/fields/CommercientSF__EccFlag__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__EccFlag__c</fullName>
    <label>ECC item</label>
    <length>255</length>
    <type>Text</type>
</CustomField>