force-app/main/default/objects/CommercientSF__InvMaster__c/fields/CommercientSF__EccUser__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__EccUser__c</fullName>
    <label>Responsible ECC user</label>
    <length>255</length>
    <type>Text</type>
</CustomField>