force-app/main/default/objects/CommercientSF__InvMaster__c/fields/CommercientSF__FixOverhead__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__FixOverhead__c</fullName>
    <label>Fixed overhead</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>