force-app/main/default/objects/CommercientSF__InvMaster__c/fields/CommercientSF__GrossReqRule__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__GrossReqRule__c</fullName>
    <label>Gross requirements rule</label>
    <length>255</length>
    <type>Text</type>
</CustomField>