force-app/main/default/objects/CommercientSF__InvMaster__c/fields/CommercientSF__GstTaxCode__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__GstTaxCode__c</fullName>
    <label>GST tax code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>