force-app/main/default/objects/CommercientSF__InvMaster__c/fields/CommercientSF__InclInStrValid__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__InclInStrValid__c</fullName>
    <label>Include in structure validate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>