force-app/main/default/objects/CommercientSF__InvMaster__c/fields/CommercientSF__IssMultLotsFlag__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__IssMultLotsFlag__c</fullName>
    <label>Allow issues from mult lots</label>
    <length>255</length>
    <type>Text</type>
</CustomField>