force-app/main/default/objects/CommercientSF__InvMaster__c/fields/CommercientSF__JobClassification__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__JobClassification__c</fullName>
    <label>Default job classification</label>
    <length>255</length>
    <type>Text</type>
</CustomField>