force-app/main/default/objects/CommercientSF__InvMaster__c/fields/CommercientSF__JobsOnHold__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__JobsOnHold__c</fullName>
    <label>Job hold flag</label>
    <length>255</length>
    <type>Text</type>
</CustomField>