force-app/main/default/objects/CommercientSF__InvMaster__c/fields/CommercientSF__KitType__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__KitType__c</fullName>
    <label>Kit type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>