force-app/main/default/objects/CommercientSF__InvMaster__c/fields/CommercientSF__LabourCost__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__LabourCost__c</fullName>
    <label>Labor cost</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>