force-app/main/default/objects/CommercientSF__InvMaster__c/fields/CommercientSF__LctRequired__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__LctRequired__c</fullName>
    <label>Landed Costing Tracking</label>
    <length>255</length>
    <type>Text</type>
</CustomField>