force-app/main/default/objects/CommercientSF__InvMaster__c/fields/CommercientSF__ListPriceCode__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__ListPriceCode__c</fullName>
    <label>List price code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>