force-app/main/default/objects/CommercientSF__InvMaster__c/fields/CommercientSF__LoadingFactor__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__LoadingFactor__c</fullName>
    <label>Loading Factor (SFS)</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>