force-app/main/default/objects/CommercientSF__InvMaster__c/fields/CommercientSF__LongDesc__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__LongDesc__c</fullName>
    <label>Long description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>