force-app/main/default/objects/CommercientSF__InvMaster__c/fields/CommercientSF__LowLevelCode__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__LowLevelCode__c</fullName>
    <label>Low level code</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>