force-app/main/default/objects/CommercientSF__InvMaster__c/fields/CommercientSF__MaintOnHold__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__MaintOnHold__c</fullName>
    <label>Maintenance on hold by ECC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>