force-app/main/default/objects/CommercientSF__InvMaster__c/fields/CommercientSF__MakeToOrderFlag__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__MakeToOrderFlag__c</fullName>
    <label>Make to order flag</label>
    <length>255</length>
    <type>Text</type>
</CustomField>