force-app/main/default/objects/CommercientSF__InvMaster__c/fields/CommercientSF__ManMulDiv__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__ManMulDiv__c</fullName>
    <label>Manufacture to stocking factor code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>