force-app/main/default/objects/CommercientSF__InvMaster__c/fields/CommercientSF__ManualCostFlag__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__ManualCostFlag__c</fullName>
    <label>Manual cost</label>
    <length>255</length>
    <type>Text</type>
</CustomField>