force-app/main/default/objects/CommercientSF__InvMaster__c/fields/CommercientSF__ManufactureUom__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__ManufactureUom__c</fullName>
    <label>Manufacturing unit of measure</label>
    <length>255</length>
    <type>Text</type>
</CustomField>