force-app/main/default/objects/CommercientSF__InvMaster__c/fields/CommercientSF__ManufLeadTime__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__ManufLeadTime__c</fullName>
    <label>Manufacturing lead time</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>