force-app/main/default/objects/CommercientSF__InvMaster__c/fields/CommercientSF__MaterialCost__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__MaterialCost__c</fullName>
    <label>Material cost</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>