force-app/main/default/objects/CommercientSF__InvMaster__c/fields/CommercientSF__MinPricePct__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__MinPricePct__c</fullName>
    <label>Minimum price pct above cost</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>