force-app/main/default/objects/CommercientSF__InvMaster__c/fields/CommercientSF__MpsFlag__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__MpsFlag__c</fullName>
    <label>Master Production Schedule</label>
    <length>255</length>
    <type>Text</type>
</CustomField>