force-app/main/default/objects/CommercientSF__InvMaster__c/fields/CommercientSF__MulDiv__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__MulDiv__c</fullName>
    <label>Other to Stocking factor code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>