force-app/main/default/objects/CommercientSF__InvMaster__c/fields/CommercientSF__OtherTaxCode__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__OtherTaxCode__c</fullName>
    <label>Other tax code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>