force-app/main/default/objects/CommercientSF__InvMaster__c/fields/CommercientSF__OtherUom__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__OtherUom__c</fullName>
    <label>Other unit of measure</label>
    <length>255</length>
    <type>Text</type>
</CustomField>