force-app/main/default/objects/CommercientSF__InvMaster__c/fields/CommercientSF__OutputMassFlag__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__OutputMassFlag__c</fullName>
    <label>Output Mass to sales analysis</label>
    <length>255</length>
    <type>Text</type>
</CustomField>