force-app/main/default/objects/CommercientSF__InvMaster__c/fields/CommercientSF__PanSize__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__PanSize__c</fullName>
    <label>Pan or container size</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>