force-app/main/default/objects/CommercientSF__InvMaster__c/fields/CommercientSF__PartCategory__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__PartCategory__c</fullName>
    <label>Part category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>