force-app/main/default/objects/CommercientSF__InvMaster__c/fields/CommercientSF__Planner__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__Planner__c</fullName>
    <label>Planner code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>