force-app/main/default/objects/CommercientSF__InvMaster__c/fields/CommercientSF__PrcInclGst__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__PrcInclGst__c</fullName>
    <label>GST included in price</label>
    <length>255</length>
    <type>Text</type>
</CustomField>