force-app/main/default/objects/CommercientSF__InvMaster__c/fields/CommercientSF__PriceCategory__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__PriceCategory__c</fullName>
    <label>Pricing category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>