force-app/main/default/objects/CommercientSF__InvMaster__c/fields/CommercientSF__PriceMethod__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__PriceMethod__c</fullName>
    <label>Pricing method</label>
    <length>255</length>
    <type>Text</type>
</CustomField>