force-app/main/default/objects/CommercientSF__InvMaster__c/fields/CommercientSF__PriceType__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__PriceType__c</fullName>
    <label>TPM Price type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>