force-app/main/default/objects/CommercientSF__InvMaster__c/fields/CommercientSF__ProductGroup__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__ProductGroup__c</fullName>
    <label>TPM Product group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>