force-app/main/default/objects/CommercientSF__InvMaster__c/fields/CommercientSF__ProductShelfLife__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__ProductShelfLife__c</fullName>
    <label>Total product shelf life</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>