force-app/main/default/objects/CommercientSF__InvMaster__c/fields/CommercientSF__PurchOnHold__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__PurchOnHold__c</fullName>
    <label>Purchase order hold flag</label>
    <length>255</length>
    <type>Text</type>
</CustomField>