force-app/main/default/objects/CommercientSF__InvMaster__c/fields/CommercientSF__ResourceCode__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__ResourceCode__c</fullName>
    <label>Resource code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>