force-app/main/default/objects/CommercientSF__InvMaster__c/fields/CommercientSF__ReturnableItem__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__ReturnableItem__c</fullName>
    <label>Returnable item</label>
    <length>255</length>
    <type>Text</type>
</CustomField>