force-app/main/default/objects/CommercientSF__InvMaster__c/fields/CommercientSF__SalesOnHold__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__SalesOnHold__c</fullName>
    <label>Sales order hold flag</label>
    <length>255</length>
    <type>Text</type>
</CustomField>