force-app/main/default/objects/CommercientSF__InvMaster__c/fields/CommercientSF__SerEntryAtSale__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__SerEntryAtSale__c</fullName>
    <label>Enter serial numbers at sale</label>
    <length>255</length>
    <type>Text</type>
</CustomField>