force-app/main/default/objects/CommercientSF__InvMaster__c/fields/CommercientSF__SerialPrefix__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__SerialPrefix__c</fullName>
    <label>Serial Prefix</label>
    <length>255</length>
    <type>Text</type>
</CustomField>