force-app/main/default/objects/CommercientSF__InvMaster__c/fields/CommercientSF__SerialSuffix__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__SerialSuffix__c</fullName>
    <label>Next Serial Suffix</label>
    <length>255</length>
    <type>Text</type>
</CustomField>