force-app/main/default/objects/CommercientSF__InvMaster__c/fields/CommercientSF__SpecificGravity__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__SpecificGravity__c</fullName>
    <label>Specific gravity</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>