force-app/main/default/objects/CommercientSF__InvMaster__c/fields/CommercientSF__StdLandedCost__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__StdLandedCost__c</fullName>
    <label>Standard Landed Cost</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>