force-app/main/default/objects/CommercientSF__InvMaster__c/fields/CommercientSF__StdLctRoute__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__StdLctRoute__c</fullName>
    <label>Standard route code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>