force-app/main/default/objects/CommercientSF__InvMaster__c/fields/CommercientSF__StockAndAltUm__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__StockAndAltUm__c</fullName>
    <label>Quantities in stock &amp; alt uom</label>
    <length>255</length>
    <type>Text</type>
</CustomField>