force-app/main/default/objects/CommercientSF__InvMaster__c/fields/CommercientSF__StockOnHold__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__StockOnHold__c</fullName>
    <label>Stock code on hold flag</label>
    <length>255</length>
    <type>Text</type>
</CustomField>