force-app/main/default/objects/CommercientSF__InvMaster__c/fields/CommercientSF__StockOnHoldReason__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__StockOnHoldReason__c</fullName>
    <label>Reason for hold</label>
    <length>255</length>
    <type>Text</type>
</CustomField>