force-app/main/default/objects/CommercientSF__InvMaster__c/fields/CommercientSF__StockUom__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__StockUom__c</fullName>
    <label>Stocking unit of measure</label>
    <length>255</length>
    <type>Text</type>
</CustomField>