force-app/main/default/objects/CommercientSF__InvMaster__c/fields/CommercientSF__StorageCondition__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__StorageCondition__c</fullName>
    <label>Storage condition</label>
    <length>255</length>
    <type>Text</type>
</CustomField>