force-app/main/default/objects/CommercientSF__InvMaster__c/fields/CommercientSF__StorageHazard__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__StorageHazard__c</fullName>
    <label>Storage hazard</label>
    <length>255</length>
    <type>Text</type>
</CustomField>