force-app/main/default/objects/CommercientSF__InvMaster__c/fields/CommercientSF__StorageSecurity__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__StorageSecurity__c</fullName>
    <label>Storage security code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>