force-app/main/default/objects/CommercientSF__InvMaster__c/fields/CommercientSF__StpSelection__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__StpSelection__c</fullName>
    <label>ST-Point selection code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>