force-app/main/default/objects/CommercientSF__InvMaster__c/fields/CommercientSF__SupercessionDate__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__SupercessionDate__c</fullName>
    <label>Date of supercession</label>
    <type>DateTime</type>
</CustomField>