force-app/main/default/objects/CommercientSF__InvMaster__c/fields/CommercientSF__SupplementaryUnit__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__SupplementaryUnit__c</fullName>
    <label>Supplementary units</label>
    <length>255</length>
    <type>Text</type>
</CustomField>