force-app/main/default/objects/CommercientSF__InvMaster__c/fields/CommercientSF__SupplUnitCode__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__SupplUnitCode__c</fullName>
    <label>Supplementary unit code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>