force-app/main/default/objects/CommercientSF__InvMaster__c/fields/CommercientSF__Volume__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__Volume__c</fullName>
    <label>Volume per stocking unit</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>