force-app/main/default/objects/CommercientSF__InvMaster__c/fields/CommercientSF__WarehouseToUse__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__WarehouseToUse__c</fullName>
    <label>Manufacturing warehouse to use</label>
    <length>255</length>
    <type>Text</type>
</CustomField>